--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1,4 +1,5 @@
 {
+  "workspaceData": "נתוני סביבת עבודה",
   "confirmRemoveRelationField": "האם אתה בטוח שברצונך למחוק את השדה המשויך ל-<b>${x}</b>?",
   "removeButKeepRelationField": "מחק, אך שמור על שדה הקשר",
   "exportPDFLowMemory": "אין מספיק זיכרון זמין במערכת כדי לייצא את ה-PDF הזה, נא לצמצם את התוכן או להגדיל את הזיכרון הזמין ולנסות שוב לייצא",
@@ -855,7 +856,7 @@
   "moveToBottomRight": "העבר לפינה התחתונה הימנית",
   "accountDisplayTitle": "הצג את האייקון בכותרת",
   "accountDisplayVIP": "הצג את אייקון ה-VIP",
-  "rollbackConfirm": "פעולת החזרה לא ניתנת לביטול, האם אתה בטוח שברצונך לחזור ל<b>${date}</b>?",
+  "rollbackConfirm": "לא ניתן לבטל את פעולת השחזור, אנא היזהר בהחלטתך. האם אתה בטוח שברצונך לשחזר את <b>${name}</b> ל-<b>${time}</b>?",
   "pdfTip": "ייצוא PDF אינו תומך בנושא כהה",
   "pdfConfirm": "האם תרצה להמשיך לייצא עם הנושא הנבחר האור?",
   "import": "ייבוא",
