--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1,4 +1,5 @@
 {
+  "workspaceData": "Данные рабочей области",
   "confirmRemoveRelationField": "Вы уверены, что хотите удалить поле, связанное с <b>${x}</b>?",
   "removeButKeepRelationField": "Удалить, но сохранить связанное поле",
   "exportPDFLowMemory": "Недостаточно доступной памяти для экспорта этого PDF, пожалуйста, уменьшите содержимое или увеличьте доступную память и повторите попытку экспорта",
@@ -855,7 +856,7 @@
   "moveToBottomRight": "Переместить в нижний правый угол",
   "accountDisplayTitle": "Отобразить значок заголовка",
   "accountDisplayVIP": "Отобразить VIP-значок",
-  "rollbackConfirm": "Операция отката не может быть отменена, вы уверены, что хотите откатить <b>${date}</b>?",
+  "rollbackConfirm": "Операция отката не может быть отменена, пожалуйста, будьте осторожны. Вы уверены, что хотите откатить <b>${name}</b> к <b>${time}</b>?",
   "pdfTip": "Экспорт PDF не поддерживает темную тему",
   "pdfConfirm": "Вы хотите продолжить экспорт с выбранной светлой темой?",
   "import": "Импортировать",
