--- a/app/appearance/langs/it_IT.json
+++ b/app/appearance/langs/it_IT.json
@@ -1,4 +1,5 @@
 {
+  "workspaceData": "Dati dello spazio di lavoro",
   "confirmRemoveRelationField": "Sei sicuro di voler eliminare il campo associato a <b>${x}</b>?",
   "removeButKeepRelationField": "Rimuovi, ma mantieni il campo correlato",
   "exportPDFLowMemory": "Memoria disponibile insufficiente per esportare questo PDF, riduci il contenuto o aumenta la memoria disponibile e riprova a esportare",
@@ -855,7 +856,7 @@
   "moveToBottomRight": "Sposta in basso a destra",
   "accountDisplayTitle": "Mostra l'icona del titolo",
   "accountDisplayVIP": "Mostra l'icona VIP",
-  "rollbackConfirm": "L'operazione di rollback non può essere annullata, sei sicuro di voler ripristinare a <b>${date}</b>?",
+  "rollbackConfirm": "L'operazione di rollback non può essere annullata, si prega di procedere con cautela. Sei sicuro di voler ripristinare <b>${name}</b> a <b>${time}</b>?",
   "pdfTip": "L'esportazione PDF non supporta il tema scuro",
   "pdfConfirm": "Vuoi continuare l'esportazione con il tema chiaro selezionato?",
   "import": "Importa",
