--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -726,7 +726,7 @@
   "closeNotebook": "מחברות סגורות",
   "widget": "ווידג'ט",
   "customEmoji": "הוסף אימוג'י מותאם אישית",
-  "customEmojiTip": "שום את התמונות לתיקיית האימוג'י, והשתמש בתיקיות כדי לסווג אותן",
+  "customEmojiTip": "הכנס את התמונות לתיקיית emojis, ניתן להשתמש בתיקייה אחת לסיווג, הנתיב לא צריך להכיל רווחים וסימני Markdown",
   "recentEmoji": "אימוג'ים פופולאריים",
   "changeIcon": "שנה אייקון",
   "addIcon": "הוסף אייקון",
