--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -726,7 +726,7 @@
   "closeNotebook": "Закрытые блокноты",
   "widget": "Виджет",
   "customEmoji": "Добавить пользовательский эмодзи",
-  "customEmojiTip": "Поместите изображения в папку эмодзи и используйте папки для их классификации",
+  "customEmojiTip": "Поместите изображения в папку emojis, можно использовать одну папку для классификации, путь не должен содержать пробелы и символы разметки Markdown",
   "recentEmoji": "Часто используемые смайлики",
   "changeIcon": "Изменить значок",
   "addIcon": "Добавить значок",
