:art: Improve database paging loading https://github.com/siyuan-note/siyuan/issues/12780

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -1,4 +1,5 @@
 {
+  "entryNum": "Anzahl der Einträge",
   "workspaceData": "Arbeitsbereichsdaten",
   "confirmRemoveRelationField": "Sind Sie sicher, dass Sie das Feld, das mit <b>${x}</b> verknüpft ist, löschen möchten?",
   "removeButKeepRelationField": "Entfernen, aber verknüpftes Feld behalten",
