--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1,4 +1,5 @@
 {
+  "entryNum": "Количество записей",
   "workspaceData": "Dane przestrzeni roboczej",
   "confirmRemoveRelationField": "Czy na pewno chcesz usunąć pole powiązane z <b>${x}</b>?",
   "removeButKeepRelationField": "Usuń, ale zachowaj powiązane pole",
