--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1,4 +1,6 @@
 {
+  "backlinkContainChildren": "Do backlinks contain child blocks",
+  "backlinkContainChildrenTip": "When enabled, child blocks will be included in the backlink calculation",
   "entryNum": "Number of entries",
   "workspaceData": "Workspace data",
   "confirmRemoveRelationField": "Are you sure you want to delete the field associated with <b>${x}</b>?",
