--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1,4 +1,6 @@
 {
+  "backlinkContainChildren": "バックリンクに子ブロックを含めるかどうか",
+  "backlinkContainChildrenTip": "有効にすると、子ブロックがバックリンク計算に含まれます",
   "entryNum": "エントリ数",
   "workspaceData": "ワークスペースデータ",
   "confirmRemoveRelationField": "<b>${x}</b> に関連するフィールドを同時に削除してもよろしいですか？",
