--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1,4 +1,6 @@
 {
+  "backlinkContainChildren": "Включать ли дочерние блоки в обратные ссылки",
+  "backlinkContainChildrenTip": "После включения дочерние блоки будут включены в расчет обратных ссылок",
   "entryNum": "Количество записей",
   "workspaceData": "Данные рабочей области",
   "confirmRemoveRelationField": "Вы уверены, что хотите удалить поле, связанное с <b>${x}</b>?",
