:memo: Update changelogs

--- a/app/changelogs/v3.1.10/v3.1.10.md
+++ b/app/changelogs/v3.1.10/v3.1.10.md
@@ -2,7 +2,7 @@
 
 This version improves database performance and user interface details.
 
-In addition, we have also improved the backlink panel logic and no longer include sub-blocks in the calculation, which helps to display backlinks more accurately.
+In addition, we have also improved the backlink panel details to support excluding child-blocks from backlink calculations, which helps to display backlinks more accurately.
 
 ## Changelogs
 
@@ -13,6 +13,7 @@ Below are the detailed changes in this version.
 * [Improve interaction when deleting two-way relation field in a database](https://github.com/siyuan-note/siyuan/issues/11252)
 * [Improve plugin dock position persistence](https://github.com/siyuan-note/siyuan/issues/11931)
 * [Supports disabling Markdown `~~` syntax input](https://github.com/siyuan-note/siyuan/issues/12641)
+* [Improve database paging loading](https://github.com/siyuan-note/siyuan/issues/12780)
 * [WebDAV/S3 data sync and backup support configurable concurrent requests](https://github.com/siyuan-note/siyuan/issues/12798)
 * [Improve the logic of multiple selected blocks forming a super block](https://github.com/siyuan-note/siyuan/issues/12809)
 * [Browser clipping extension sends no more scrolling pages](https://github.com/siyuan-note/siyuan/issues/12817)
@@ -22,8 +23,9 @@ Below are the detailed changes in this version.
 * [Improve database relation & rollup field loading performance](https://github.com/siyuan-note/siyuan/issues/12835)
 * [Improve user interface](https://github.com/siyuan-note/siyuan/issues/12848)
 * [Refresh doc tree after data sync](https://github.com/siyuan-note/siyuan/issues/12860)
-* [The backlink panel no longer displays child-block references](https://github.com/siyuan-note/siyuan/issues/12861)
+* [Support child-blocks not being included in the backlink calculation](https://github.com/siyuan-note/siyuan/issues/12861)
 * [The backlink panel no longer displays breadcrumbs of the first-level blocks](https://github.com/siyuan-note/siyuan/issues/12862)
+* [Improve custom emojis at the beginning of the block](https://github.com/siyuan-note/siyuan/issues/12868)
 
 ### Bugfix
 
