--- a/app/changelogs/v3.1.10/v3.1.10_zh_CHT.md
+++ b/app/changelogs/v3.1.10/v3.1.10_zh_CHT.md
@@ -2,7 +2,7 @@
 
 此版本改進了資料庫效能和使用者介面細節。
 
-另外，我們也改進了反鏈面板邏輯，不再將子塊納入計算，這有助於更精確地顯示反鏈。
+另外，我們也改進了反鏈面板細節，支援子區塊不納入反鏈計算，這有助於更精確地顯示反鏈。
 
 ## 變更記錄
 
@@ -13,6 +13,7 @@
 * [改進刪除資料庫中雙向關聯欄位時的互動](https://github.com/siyuan-note/siyuan/issues/11252)
 * [改進插件停靠列位置的持久化](https://github.com/siyuan-note/siyuan/issues/11931)
 * [支援禁用 Markdown `~~` 語法輸入](https://github.com/siyuan-note/siyuan/issues/12641)
+* [改進資料庫分頁載入](https://github.com/siyuan-note/siyuan/issues/12780)
 * [WebDAV/S3 資料同步與備份支援設定並發請求數](https://github.com/siyuan-note/siyuan/issues/12798)
 * [改進多選塊形成超級塊的邏輯](https://github.com/siyuan-note/siyuan/issues/12809)
 * [瀏覽器剪藏擴充功能不再需要捲動頁面](https://github.com/siyuan-note/siyuan/issues/12817)
@@ -22,8 +23,9 @@
 * [改進資料庫關聯和匯總欄位載入效能](https://github.com/siyuan-note/siyuan/issues/12835)
 * [改進使用者介面](https://github.com/siyuan-note/siyuan/issues/12848)
 * [資料同步後刷新文件樹](https://github.com/siyuan-note/siyuan/issues/12860)
-* [反向連結面板不再顯示子塊引用](https://github.com/siyuan-note/siyuan/issues/12861)
+* [支援子區塊不納入反鏈計算](https://github.com/siyuan-note/siyuan/issues/12861)
 * [反向連結面板不再顯示一一級塊的麵包屑](https://github.com/siyuan-note/siyuan/issues/12862)
+* [改進區塊開始處的自訂表情](https://github.com/siyuan-note/siyuan/issues/12868)
 
 ### 修復缺陷
 
