--- a/app/changelogs/v3.1.10/v3.1.10_zh_CN.md
+++ b/app/changelogs/v3.1.10/v3.1.10_zh_CN.md
@@ -2,7 +2,7 @@
 
 该版本改进了数据库性能和用户界面细节。
 
-另外，我们也改进了反链面板逻辑，不再将子块纳入计算，这有助于更加精确地显示反链。
+另外，我们也改进了反链面板细节，支持子块不纳入反链计算，这有助于更加精确地显示反链。
 
 ## 变更记录
 
@@ -13,6 +13,7 @@
 * [改进删除数据库中双向关联字段时的交互](https://github.com/siyuan-note/siyuan/issues/11252)
 * [改进插件停靠栏位置的持久化](https://github.com/siyuan-note/siyuan/issues/11931)
 * [支持禁用 Markdown `~~` 语法输入](https://github.com/siyuan-note/siyuan/issues/12641)
+* [改进数据库分页加载](https://github.com/siyuan-note/siyuan/issues/12780)
 * [WebDAV/S3 数据同步和备份支持配置并发请求数](https://github.com/siyuan-note/siyuan/issues/12798)
 * [改进多选块形成超级块的逻辑](https://github.com/siyuan-note/siyuan/issues/12809)
 * [浏览器剪藏扩展不再需要滚动页面](https://github.com/siyuan-note/siyuan/issues/12817)
@@ -22,8 +23,9 @@
 * [改进数据库关联和汇总字段加载性能](https://github.com/siyuan-note/siyuan/issues/12835)
 * [改进用户界面](https://github.com/siyuan-note/siyuan/issues/12848)
 * [数据同步后刷新文档树](https://github.com/siyuan-note/siyuan/issues/12860)
-* [反向链接面板不再显示子块引用](https://github.com/siyuan-note/siyuan/issues/12861)
+* [支持子块不纳入反链计算](https://github.com/siyuan-note/siyuan/issues/12861)
 * [反向链接面板不再显示一级块的面包屑](https://github.com/siyuan-note/siyuan/issues/12862)
+* [改进块开始处的自定义表情](https://github.com/siyuan-note/siyuan/issues/12868)
 
 ### 修复缺陷
 
