--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -108,7 +108,7 @@
   "clearContext": "נקה הקשר",
   "cloudStoragePurge": "ניקוי אחסון בענן",
   "cloudStoragePurgeConfirm": "ניקוי האחסון בענן ימחוק לחלוטין את כל הצילומים הלא מתייחסים וכל האובייקטים הנתונים הקשורים. <ul class='fn__list'><li>אנא ודא שהמכשירים האחרים הפסיקו סנכרון לפני הביצוע</li><li>הניקוי מאוד לוקח זמן, אנא ודא שהרשת יציבה</li></ul>האם אתה בטוח לבצע את זה עכשיו?",
-  "dragFill": "גרור באופן אנכי כדי למלא ערך",
+  "dragFill": "גרור אנכית כדי למלא ערכים",
   "switchReadonly": "עבר למצב קריאה בלבד",
   "original": "מקורי",
   "selectRelation": "אנא בחר קודם את העמודה הקשורה",
