--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -108,7 +108,7 @@
   "clearContext": "コンテキストを消去",
   "cloudStoragePurge": "クラウドストレージを消去",
   "cloudStoragePurgeConfirm": "クラウドストレージを消去すると、参照されていないスナップショットと関連データオブジェクトが完全に削除されます。<ul class='fn__list'><li>実行前に他のデバイスが同期を一時停止していることを確認してください</li><li>消去操作は非常に時間がかかるため、ネットワークが安定していることを確認してください</li></ul>今すぐ実行してもよろしいですか？",
-  "dragFill": "ドロップダウンで値を入力する",
+  "dragFill": "値を埋めるために垂直にドラッグ",
   "switchReadonly": "読み取り専用モードの切り替え",
   "original": "元の値",
   "selectRelation": "最初に関連する列を選択してください",
