--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -108,7 +108,7 @@
   "clearContext": "Borrar contexto",
   "cloudStoragePurge": "Borrar almacenamiento en la nube",
   "cloudStoragePurgeConfirm": "Al purgar el almacenamiento en la nube se eliminarán por completo todas las instantáneas sin referencia y los objetos de datos relacionados.<ul class='fn__list'><li>Asegúrese de que otros dispositivos hayan pausado la sincronización antes de la ejecución</li><li>La operación de purga requiere mucho tiempo; asegúrese de que la red esté estable</li></ul>¿Está seguro de ejecutarla ahora?",
-  "dragFill": "Arrastra verticalmente para rellenar el valor",
+  "dragFill": "Arrastra verticalmente para llenar valores",
   "switchReadonly": "Cambiar modo de sólo lectura",
   "original": "Original",
   "selectRelation": "Seleccione primero la columna relacionada",
