--- a/app/appearance/langs/it_IT.json
+++ b/app/appearance/langs/it_IT.json
@@ -108,7 +108,7 @@
   "clearContext": "Cancella contesto",
   "cloudStoragePurge": "Pulisci lo storage cloud",
   "cloudStoragePurgeConfirm": "La pulizia dello storage cloud eliminerà completamente tutti gli snapshot non referenziati e gli oggetti dati correlati. <ul class='fn__list'><li>Assicurati che gli altri dispositivi abbiano sospeso la sincronizzazione prima dell'esecuzione</li><li>L'operazione di pulizia è molto lunga, assicurati che la rete sia stabile</li></ul>Sei sicuro di voler eseguire ora?",
-  "dragFill": "Trascina verticalmente per riempire il valore",
+  "dragFill": "Trascina verticalmente per riempire i valori",
   "switchReadonly": "Passa alla modalità di sola lettura",
   "original": "Originale",
   "selectRelation": "Seleziona prima la colonna correlata",
