--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -108,7 +108,7 @@
   "clearContext": "Wyczyść kontekst",
   "cloudStoragePurge": "Oczyść pamięć w chmurze",
   "cloudStoragePurgeConfirm": "Oczyszczenie pamięci w chmurze całkowicie usunie wszystkie nieodwołane zrzuty i powiązane obiekty danych. <ul class='fn__list'><li>Proszę upewnić się, że inne urządzenia wstrzymały synchronizację przed aktem</li><li>Operacja oczyszczania jest czasochłonna, proszę upewnić się, że sieć jest stabilna</li></ul>Czy na pewno chcesz to wykonać teraz?",
-  "dragFill": "Przeciągnij w pionie aby wypełnić wartość",
+  "dragFill": "Przeciągnij w pionie, aby wypełnić wartości",
   "switchReadonly": "Przełącz tryb tylko do odczytu",
   "original": "Oryginalny",
   "selectRelation": "Proszę najpierw wybrać powiązaną kolumnę",
