--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -1561,6 +1561,8 @@
     "245": "La indexación de datos no se ha completado desde el último uso. Ejecute [Árbol de documentos - Reconstruir índice] una vez. Utilice [Salir de la aplicación] en el panel de la columna derecha para salir normalmente",
     "246": "El título del documento no puede contener / y ha sido reemplazado por _",
     "247": "El archivo [%s] es más grande que el límite máximo [%s] y se ha ignorado para cargarlo en la nube",
-    "248": "El rumbo de destino está ubicado en el bloque contenedor y no puede usarse como punto de entrega"
+    "248": "El rumbo de destino está ubicado en el bloque contenedor y no puede usarse como punto de entrega",
+    "249": "No se puede acceder a los datos debido a un error de configuración. Por favor, verifique las configuraciones y permisos de almacenamiento en la nube",
+    "250": "La solicitud ha sido limitada por el almacenamiento en la nube. Por favor, verifique las configuraciones y permisos de almacenamiento en la nube"
   }
 }
