--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1561,6 +1561,8 @@
     "245": "前回の使用以降、データのインデックス作成が完了していません。[ドキュメントツリー] - [インデックスの再構築] を一度実行してください。正常に終了するには、右側のパネルから [アプリケーションの終了] を使用してください。",
     "246": "ドキュメントのタイトルに / を含めることはできません。_ に置き換えられました",
     "247": "ファイル [%s] は制限サイズ [%s] を超えているためアップロードされませんでした",
-    "248": "目標の見出しがコンテナブロック内にあるためドロップできません"
+    "248": "目標の見出しがコンテナブロック内にあるためドロップできません",
+    "249": "設定エラーのためデータにアクセスできません。設定を一つずつ確認し、クラウドストレージの権限を確認してください",
+    "250": "リクエストがクラウドストレージによって制限されました。設定を一つずつ確認し、クラウドストレージの権限を確認してください"
   }
 }
