--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1561,6 +1561,8 @@
     "245": "Индексация данных не была завершена после последнего использования. Пожалуйста, выполните [Дерево документов - Восстановить индекс]. Пожалуйста, используйте [Выход из приложения] в правой боковой панели для нормального выхода",
     "246": "Название документа не может содержать / и было заменено на _",
     "247": "Файл [%s] больше максимального ограничения [%s] и был проигнорирован для загрузки в облако",
-    "248": "Целевой заголовок находится в контейнерном блоке и не может использоваться как пункт сброса"
+    "248": "Целевой заголовок находится в контейнерном блоке и не может использоваться как пункт сброса",
+    "249": "Из-за ошибки конфигурации невозможно получить доступ к данным. Пожалуйста, проверьте настройки и права доступа к облачному хранилищу",
+    "250": "Запрос был ограничен облачным хранилищем. Пожалуйста, проверьте настройки и права доступа к облачному хранилищу"
   }
 }
