--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1561,6 +1561,8 @@
     "245": "上次使用後未完成資料索引，請執行一次 [文檔樹 - 重建索引]。以後請使用右側欄面板中的 [退出應用] 進行正常退出",
     "246": "文件標題不能包含 /，已經使用 _ 替換",
     "247": "檔案 [%s] 大於最大限制 [%s]，已忽略上傳至社群圖床",
-    "248": "目標標題位於容器塊中，無法作為放置點"
+    "248": "目標標題位於容器塊中，無法作為放置點",
+    "249": "因配置錯誤導致無法存取數據，請仔細逐個核對配置項，並檢查雲端存儲相關權限配置",
+    "250": "請求已被雲端存儲限流，請仔細逐個核對配置項，並檢查雲端存儲相關權限配置"
   }
 }
