--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1561,6 +1561,8 @@
     "245": "上次使用后未完成数据索引，请执行一次 [文档树 - 重建索引]。以后请使用右侧栏面板中的 [退出应用] 进行正常退出",
     "246": "文档标题不能包含 /，已经使用 _ 替换",
     "247": "文件 [%s] 大于最大限制 [%s]，已忽略上传到社区图床",
-    "248": "目标标题位于容器块中，无法作为放置点"
+    "248": "目标标题位于容器块中，无法作为放置点",
+    "249": "因配置错误导致无法存取数据，请仔细逐个核对配置项，并检查云端存储相关权限配置",
+    "250": "请求已被云端存储限流，请仔细逐个核对配置项，并检查云端存储相关权限配置"
   }
 }
